--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="star/text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="star/css/style.css">
 </head>
 
 <body>
