--- a/index.html
+++ b/index.html
@@ -3,33 +3,12 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="star/text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="star/css/style.css">
 </head>
 
 <body>
-
-<ul id="a" class="a">
-    <li class="item" title="很不好"></li>
-    <li class="item" title="不好"></li>
-    <li class="item" title="一般"></li>
-    <li class="item" title="好"></li>
-    <li class="item" title="很好"></li>
-</ul>
-
-
-<ul id="b" class="a">
-    <li class="item" title="很不好"></li>
-    <li class="item" title="不好"></li>
-    <li class="item" title="一般"></li>
-    <li class="item" title="好"></li>
-    <li class="item" title="很好"></li>
-</ul>
-
-
-
-
+<iframe src="star/star.html" id=star style="height:535px;"></iframe>
+<iframe src="rose/rose.html" id=rose style="width:535px;height:535px;"></iframe>
 
 </body>
-    <script  type="text/javascript" class="library" src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <script  type="text/javascript" class="library" src="star/js/star.js"></script>
 </html>
