--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ $(function(){
 
 <body>
 <iframe src="star/star.html" id=star ></iframe>
-<iframe src="rose/rose.html" id=rose style="width:535px;height:535px;"></iframe>
+<iframe src="rose/rose.html" id=rose ></iframe>
 
 </body>
 </html>
