--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ $(function(){
 </script>
 
 <body>
-<iframe src="star/star.html" id=star ></iframe>
-<iframe src="rose/rose.html" id=rose ></iframe>
+<iframe src="star/star.html" id="star" ></iframe>
+<iframe src="rose/rose.html" id="rose" ></iframe>
 
 </body>
 </html>
