慕课网 写字

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
-<iframe src="star/star.html" id="star" marginwidth=0 marginheight=0 frameborder=0 scrolling=no></iframe>
-<iframe src="rose/rose.html" id="rose" marginwidth=0 marginheight=0 frameborder=0 scrolling=auto></iframe>
+<iframe src="田字格/index.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
+<iframe src="star/star.html" id="star" marginwidth=0 marginheight=0 frameborder=1 scrolling=no></iframe>
+<iframe src="rose/rose.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
 
 </body>
 <script type="text/javascript">
