--- a/田字格/index.html
+++ b/田字格/index.html
@@ -2,8 +2,15 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>田字格</title>
+<meta name="viewport" 
+	content="width=device-width, 
+				initial-scale=1.0, 
+				maximum-scale=1.0, 
+				user-scalable=no">    
+<title>田字格</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <script  type="text/javascript" class="library" src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+
 </head>
 <style>
     #canvas{
@@ -12,7 +19,6 @@
     }
 </style>
 <body>
-    <h1>田字格</h1>
     <canvas id="canvas">
         您的浏览器不支持canvas!
     </canvas>
