--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <iframe src="田字格/index.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
 <iframe src="star/star.html" id="star" marginwidth=0 marginheight=0 frameborder=1 scrolling=no></iframe>
 <iframe src="rose/rose.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
+<iframe src="jdTab/tab.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
+<iframe src="jQueryTab/tab.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
+
 
 </body>
 <script type="text/javascript">
