--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+<iframe src="eCharts/demo.html" id="eCharts" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
 <iframe src="田字格/index.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
 <iframe src="star/star.html" id="star" marginwidth=0 marginheight=0 frameborder=1 scrolling=no></iframe>
 <iframe src="rose/rose.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
