--- a/eCharts/demo.html
+++ b/eCharts/demo.html
@@ -12,8 +12,7 @@
     <div id="main" style="width: 600px;height:400px;"></div>
 	</body>
 	<script  type="text/javascript" class="library" src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <script  type="text/javascript" src="echarts.js"></script>
-    <script  type="text/javascript" src="demo/data.js"></script>
+<script src="https://cdn.bootcss.com/echarts/3.6.2/echarts.common.min.js"></script>    <script  type="text/javascript" src="demo/data.js"></script>
     <script  type="text/javascript" src="demo/demo.js"></script>
 	<script type="text/javascript">
 
