--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <iframe src="rose/rose.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
 <iframe src="jdTab/tab.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
 <iframe src="jQueryTab/tab.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
+<iframe src="shopping/index.html" id="vueShooping" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
 
 
 </body>
