--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
 <body>
 <iframe src="eCharts/demo.html" id="eCharts" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
-<iframe src="田字格/index.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
+<iframe src="田字格/index.html" id="田字格" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
 <iframe src="star/star.html" id="star" marginwidth=0 marginheight=0 frameborder=1 scrolling=no></iframe>
 <iframe src="rose/rose.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
-<iframe src="jdTab/tab.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
-<iframe src="jQueryTab/tab.html" id="rose" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
+<iframe src="jdTab/tab.html" id="jdTab" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
+<iframe src="jQueryTab/tab.html" id="jQueryTab" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
 <iframe src="shopping/index.html" id="vueShooping" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
+<iframe src="select/search_dialog.html" id="search" marginwidth=0 marginheight=0 frameborder=1 scrolling=auto></iframe>
 
 
 </body>
