内存泄漏  测试 jq插件完善

--- a/LearnAndTest/内存泄漏.html
+++ b/LearnAndTest/内存泄漏.html
@@ -21,7 +21,7 @@
     var replaceThing = function () {
         var originalThing = theThing;
         var unused = function () {
-            if (originalThing)
+            //if (originalThing)
                 console.log("hi");
         };
         theThing = {
