研究一个 文本轮询 组件

--- a/sroller/jQueryVscroller20161027/new/abis.html
+++ b/sroller/jQueryVscroller20161027/new/abis.html
@@ -29,6 +29,7 @@
                         <div class="circle blue"><span class="day">22号</span><span class="elipses"></span><span
                                 class="month">一月</span></div>
                     </div>
+
                 </div>
                 <div class="description"><h1><a href="#">比中号码</a></h1>
                     <div class="detail">
@@ -60,7 +61,7 @@
 
 </body>
 <script>
-    $(".news").each(function () {
+    $(".news-contents").each(function () {
         var newsContents = $(this);
         var interval = null;
         var mouseIn = false;
