文本轮询 组件

--- a/sroller/jQueryVscroller20161027/new/abis.html
+++ b/sroller/jQueryVscroller20161027/new/abis.html
@@ -6,15 +6,6 @@
     <script src="../js/jquery-1.4.4.min.js" type="text/javascript"></script>
     <link href="../css/vscroller.css" rel="stylesheet" type="text/css"/>
     <script src="vscroller.js" type="text/javascript"></script>
-    <style type="text/css">
-        body {
-            margin: 0;
-            padding: 0;
-            background: url(../images/bg-body.jpg);
-            font-family: Arial;
-        }
-
-    </style>
 
 </head>
 <body>
@@ -29,15 +20,10 @@
                         <div class="circle blue"><span class="day">22号</span><span class="elipses"></span><span
                                 class="month">一月</span></div>
                     </div>
-
                 </div>
                 <div class="description"><h1><a href="#">比中号码</a></h1>
                     <div class="detail">
-                        认定时间：2018年5月14日17:04:21
-                        认定单位：啊啊啊啊
-                        案件编号：A123123213123123
-                        人员编号：M121231321231123
-                        查询类型: 正查
+                        认定人：hsabisadm&nbsp;认定时间：2018-05-11 16:07:24&nbsp;认定单位代码：110000000000&nbsp;比对任务类型：正查(LT)&nbsp;捺印卡号：7100000000002018010006&nbsp;现场卡号：A710000000000201801000104&nbsp;案件号码：A7100000000002018010001
                     </div>
                 </div>
             </div>
@@ -49,18 +35,47 @@
                     </div>
                 </div>
                 <div class="description"><h1><a href="#">jQuery Pagination Plugin</a></h1>
-                    <div class="detail">Smart Paginator is a comprehensive jQuery Pagination plugin that makes adding
-                        pa...
+                    <div class="detail">
+                        认定人：hsabisadm&nbsp;认定时间：2018-05-11 16:07:24&nbsp;认定单位代码：110000000000&nbsp;比对任务类型：正查(LT)&nbsp;捺印卡号：7100000000002018010006&nbsp;现场卡号：A710000000000201801000104&nbsp;案件号码：A7100000000002018010001
+                    </div>
+                </div>
+            </div>
+            <div class="news" style="top: 201px;">
+                <div class="history">
+                    <div class="circle-outer">
+                        <div class="circle blue"><span class="day">22号</span><span class="elipses"></span><span
+                                class="month">一月</span></div>
+                    </div>
+
+                </div>
+                <div class="description"><h1><a href="#">比中号码</a></h1>
+                    <div class="detail">
+                        认定人：hsabisadm&nbsp;认定时间：2018-05-11 16:07:24&nbsp;认定单位代码：110000000000&nbsp;比对任务类型：正查(LT)&nbsp;捺印卡号：7100000000002018010006&nbsp;现场卡号：A710000000000201801000104&nbsp;案件号码：A7100000000002018010001
+                    </div>
+                </div>
+            </div>
+            <div class="news" style="top: 301px;">
+                <div class="history">
+                    <div class="circle-outer">
+                        <div class="circle yellow"><span class="day">24号</span><span class="elipses"></span><span
+                                class="month">十一月</span></div>
+                    </div>
+                </div>
+                <div class="description"><h1><a href="#">jQuery Pagination Plugin</a></h1>
+                    <div class="detail">
+                        认定人：hsabisadm&nbsp;认定时间：2018-05-11 16:07:24&nbsp;认定单位代码：110000000000&nbsp;比对任务类型：正查(LT)&nbsp;捺印卡号：7100000000002018010006&nbsp;现场卡号：A710000000000201801000104&nbsp;案件号码：A7100000000002018010001
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
 
 </body>
 <script>
+    return;
     $(".news-contents").each(function () {
         var newsContents = $(this);
         var interval = null;
