--- a/canvas/abis/unit/细节特征.html
+++ b/canvas/abis/unit/细节特征.html
@@ -101,7 +101,7 @@
             left_img = Math.abs((image.width*zoom-canvas.width)/2)
         }else{
             zoom=canvas.width/image.width;
-            top = Math.abs((image.height*zoom-canvas.height)/2)
+            top_img = Math.abs((image.height*zoom-canvas.height)/2)
         }
         image.set({//设置图片在canvas中的位置和样子
             left: 0,
