--- a/canvas/abis/unit/指纹图像.html
+++ b/canvas/abis/unit/指纹图像.html
@@ -25,6 +25,9 @@
     </div>
     <div>
 
+        <input type="button" value="放大" onclick="zoom(0.05)"></input>
+        <input type="button" value="缩小" onclick="zoom(-0.05)"></input>
+        <input type="button" value="旋转" onclick="angle(10)"></input>
 
         <br/>
         <input type="button" value="Blur(模糊)" onclick="Invoke('Blur')"></input>
@@ -41,6 +44,8 @@
         <input type="button" value="RemoveColor（去色N）" onclick="Invoke('RemoveColor')"></input>
         <input type="button" value="Resize（N）" onclick="Invoke('Resize')"></input>
         <input type="button" value="Saturation（色彩饱和度）" onclick="Invoke('Saturation')"></input>
+
+
 
     </div>
     <script>
@@ -62,18 +67,28 @@
                 top_img = Math.abs((image.height*scale_img-canvas.height)/2)
             }
             image.set({//设置图片在canvas中的位置和样子
-                left: left_img,
-                top:top_img,
-                selectable: false,//不可操作
-                hoverCursor: 'default',
-                angle: 0
+                // left: left_img,
+                // top:top_img,
+                //selectable: false,//不可操作
+                // originX:'center',
+                // originY:'center',
+                originX: 'left',
+                originY: 'top',
+                hoverCursor: 'default'
 
             });
             image.scale(scale_img).setCoords();
             canvas.add(image);
             canvas.calcOffset();
         });
-
+        function zoom(value){
+            canvas.setZoom(canvas.getZoom()+value)
+        }
+        function angle(value) {
+            var image = canvas.getObjects("image")[0];
+            image.set({angle:image.get('angle')+value})
+            canvas.renderAll();
+        }
         function Invoke(name) {
             var image = canvas.getObjects("image")[0];
             var filter;
@@ -114,9 +129,7 @@
                     })
             }
             image.filters.push(filter);
-
             image.applyFilters();
-            //canvas.renderAll.bind(canvas)()
             canvas.renderAll();
         }
 
