--- a/eCharts/beijing/portal/lpcasegis.html
+++ b/eCharts/beijing/portal/lpcasegis.html
@@ -7,7 +7,7 @@
 </head>
 <style>
     .gisMap {
-        height: 900px;
+        height: 988px;
     }
     .name {
         margin-top: 20px;
@@ -55,14 +55,13 @@
 </body>
 <script type="text/javascript"
         src="https://dingtalk.mapabc.com/as/webapi/js/auth?v=1.0&t=jsmap&ak=9b2f2e65f5e1849100c6fbf80a134c3e"></script>
-<script src="js/jquery-1.12.3.min.js"></script>
-<script src="js/gis/jquery.json-2.2.min.js"></script>
-<script src="js/gis/jquery.ajax.js"></script>
-<script src="https://cdn.bootcss.com/layer/2.3/layer.js"></script>
-<script src="js/gis/abislayer.js"></script>
-<script src="js/data.js"></script>
-<script src="js/gis/webcode.js"></script>
-<script src="js/gis/webutil.js"></script>
-<script src="js/gis/gishelper.js"></script>
+<script src="../js/jquery-1.12.3.min.js"></script>
+<script src="../js/gis/jquery.json-2.2.min.js"></script>
+<script src="../js/gis/jquery.ajax.js"></script>
+<script src="../js/gis/abislayer.js"></script>
+<script src="../js/data.js"></script>
+<script src="../js/gis/webcode.js"></script>
+<script src="../js/gis/webutil.js"></script>
+<script src="../js/gis/gishelper.js"></script>
 
 </html>
