--- a/eCharts/beijing/系统战果汇总情况2.html
+++ b/eCharts/beijing/系统战果汇总情况2.html
@@ -16,7 +16,7 @@
 <script src="js/echarts.min.js"></script>
 <script src="js/theme.js"></script>
 <script src="js/data.js"></script>
-<script src="js/echart_hit.js"></script>
+<script src="js/echart_hit2.js"></script>
 
 
 </html>
